RESOLVED FIXED 35759
When WebGL is enabled, enable hardware compositing bypassing check for CoreVideo bug fix
https://bugs.webkit.org/show_bug.cgi?id=35759
Summary When WebGL is enabled, enable hardware compositing bypassing check for CoreVi...
Chris Marrin
Reported 2010-03-04 11:49:45 PST
HW compositing was turned off for Leopard due to a Core Video bug. This caused crashes sometimes with Video on a HW compositing layer. We could turn it back on if WebGL is turned on. This would limit the exposure of the Core Video bug to those who have opted in to WebGL in a nightly build. This is related to: https://bugs.webkit.org/show_bug.cgi?id=35338.
Attachments
Patch (3.31 KB, patch)
2010-03-08 14:34 PST, Chris Marrin
darin: review+
Darin Adler
Comment 1 2010-03-07 10:13:18 PST
Seems fine. I would word this as: "When WebGL is enabled, enable hardware compositing bypassing check for CoreVideo bug fix" Or something like that.
Chris Marrin
Comment 2 2010-03-08 14:34:34 PST
Chris Marrin
Comment 3 2010-03-08 14:55:45 PST
Note You need to log in before you can comment on or make changes to this bug.