When WebGL is enabled, enable hardware compositing bypassing check for CoreVideo bug fix https://bugs.webkit.org/show_bug.cgi?id=35759

Canonical link: https://commits.webkit.org/46982@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55685 268f45cc-cd09-0410-ab3c-d52691b4dbfc